--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "benevis",
     "bennevis",
     "coursesandactivities",
+    "darkorange",
     "fansipan",
     "grossglockner",
     "Hpjdo",
@@ -12,6 +13,7 @@
     "Lyqnjb",
     "MAMP",
     "meru",
+    "Palatino",
     "PBVH",
     "roraima",
     "simien",
