--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
   "cSpell.words": [
+    "activetwo",
     "ausangate",
     "autoplay",
     "benevis",
     "bennevis",
     "coursesandactivities",
     "darkorange",
+    "dolomia",
+    "Dolomia",
     "fansipan",
     "grossglockner",
     "Hpjdo",
@@ -15,6 +18,7 @@
     "Lyqnjb",
     "MAMP",
     "meru",
+    "noreferrer",
     "Palatino",
     "PBVH",
     "roraima",
