--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,20 @@
     "activetwo",
     "ausangate",
     "autoplay",
+    "Baselayer",
+    "Baselayers",
     "benevis",
     "bennevis",
     "coursesandactivities",
     "darkorange",
     "dolomia",
     "Dolomia",
+    "Eyewear",
     "fansipan",
     "grossglockner",
+    "Handwear",
+    "Hardshells",
+    "Headwear",
     "Hpjdo",
     "IMAGEKIT",
     "kangchejunga",
@@ -18,11 +24,16 @@
     "Lyqnjb",
     "MAMP",
     "meru",
+    "Midlayer",
+    "Midlayers",
     "noreferrer",
+    "Overboots",
     "Palatino",
     "PBVH",
     "roraima",
     "simien",
+    "Softshells",
+    "Womenswear",
     "zugspitze"
   ]
 }
