--- a/front_end/package.json
+++ b/front_end/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
+    "react-inner-image-zoom": "^4.0.1",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
