delete some un-used files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,17 @@
 {
   "cSpell.words": [
+    "acount",
+    "Acount",
     "activetwo",
     "ausangate",
     "autoplay",
+    "axios",
+    "Axios",
     "Baselayer",
     "Baselayers",
     "benevis",
     "bennevis",
+    "ckeditor",
     "coursesandactivities",
     "darkorange",
     "dolomia",
