--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "bennevis",
     "ckeditor",
     "coursesandactivities",
+    "CURLOPT",
     "darkorange",
     "dolomia",
     "Dolomia",
@@ -23,6 +24,7 @@
     "Hardshells",
     "Headwear",
     "Hpjdo",
+    "HTTPHEADER",
     "IMAGEKIT",
     "isdid",
     "isdssss",
@@ -38,6 +40,8 @@
     "Overboots",
     "Palatino",
     "PBVH",
+    "POSTFIELDS",
+    "RETURNTRANSFER",
     "roraima",
     "simien",
     "Softshells",
