--- a/front_end/package.json
+++ b/front_end/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@paypal/react-paypal-js": "^8.8.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -12,8 +11,6 @@
     "axios": "^1.11.0",
     "bootstrap-icons": "^1.13.1",
     "carousel": "^0.0.3",
-    "ckeditor5": "^46.0.1",
-    "ckeditor5-premium-features": "^46.0.1",
     "imagekit-javascript": "^4.0.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -21,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-inner-image-zoom": "^4.0.1",
     "react-paginate": "^8.3.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
