--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.13.1",
     "carousel": "^0.0.3",
     "imagekit-javascript": "^4.0.1",
+    "quill-html-edit-button": "^3.0.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
